# CIA_Web

./: .babelrc  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT_GUIDE.md  LICENSE  README.md  build_log.txt  build_log_utf8.txt  client_files.txt  doc_files.txt  docker-compose.yml  docs_files.txt  main.txt  main_files.txt  package-lock.json  package.json  scripts_files.txt  server.js  server_files.txt  server_structure.txt  src_structure.txt  structure.txt  token-server.js  tsconfig.json  webpack.config.js  worker_files.txt  workers_files.txt  workers_structure.txt
.storybook/: main.js
docs/: ARCHITECTURE.md  ATOMIC_DESIGN.md  CLEANUP_PROCEDURES.md  DEVELOPMENT.md  DOCUMENTATION_TRACKER.md  ICON_README.ms  IMPLEMENTATION_TODO.md  SETUP.md  avatars.md  server-rendering.md
docs/guides/: BACKEND_SETUP.md  CONTRIBUTOR_GUIDE.md  QUICK_REFERENCE.md  SLIDER_CONTROLS.md  THUMBNAIL_WORKER.md  VR_IMPLEMENTATION.md
docs/prototypes/: canvas-theme-explorer-v2.jsx
docs/specifications/: PanelShell_Unified_Workspace_Design_Session_Memory_Log.md
public/vtp_files/: manifest.json
scripts/: buildManifestRegistry.ts  check-services.sh  load-demo-files.sh  reset-database-quick.sh  reset-database.sh  reset-dev.sh  restart.sh  seed-database.sh  start-frontend.sh  start.sh  stop.sh
server/: Dockerfile  package-lock.json  package.json
server/database/: init.sql
server/manifests/: registry.json
server/render_server/: Dockerfile  app.py  (+4 more)
src/: controller.html  embed.html  embed.js  index.html  index.js  webgpu-compute.js
vtk-wasm-app/: CMakeLists.txt  main.cxx
(+1060 files in other folders)
